<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/new_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableRow>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEstimatedAglalGrowthGreen"
        android:id="@+id/lblDisplayResultsGreen"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEstimatedAglalGrowthBlueGreen"
            android:id="@+id/lblDisplayResultsBlueGreen"/>
    </TableRow>
</TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblBack"
            android:onClick="goBack"/>

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblViewGraph"
            android:onClick="openGraph"/>

    </TableRow>
</TableLayout>
        </LinearLayout>

</LinearLayout>

