<ScrollView
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:hapticFeedbackEnabled="true"
    android:background="@drawable/new_background">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:textAlignment="center"
    android:id="@+id/mainactivity"
    android:isScrollContainer="true"
    >

    <TextView
        android:text="@string/AE"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff0000"
        android:id="@+id/lblTitle" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSelectCalcMode"
        android:layout_below="@+id/lblTitle"
        style="@style/MainPageLabel"
        android:paddingBottom="15dp"
        android:textSize="20dp"
        android:textColor="#0010FF"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spacer"
        android:layout_below="@+id/lblTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spacer2"
        android:layout_below="@+id/spacer"/>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calcMethodSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/MainPageLabel"
        android:layout_below="@+id/spacer2"
       />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_below="@+id/calcMethodSpinner"
        android:id="@+id/mainTable">

        <TableRow>

            <TextView
            android:text="@string/valueOfAlgal"
            style="@style/MainPageLabel"
                android:id="@+id/lblValueOfAlgal"/>

            <EditText
             style="@style/MainPageTextbox"
             android:inputType="number"
                android:id="@+id/tbValueOfAlgal"
                />

        </TableRow>

        <TableRow>
            <TextView
            android:text="@string/pBott"
            style="@style/MainPageLabel"
                android:id="@+id/lblPbott"/>

            <EditText
                style="@style/MainPageTextbox"
                android:inputType="number"
                android:id="@+id/tbPbott"
                />

        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/depth"
                style="@style/MainPageLabel"
                android:id="@+id/lblDepth"/>

            <EditText
                style="@style/MainPageTextbox"
                android:inputType="number"
                android:id="@+id/tbDepth"
                />

            <Spinner android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/depthMeasure"
                android:id="@+id/spinnerDepth"/>


        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/stemp"
                style="@style/MainPageLabel"
                android:id="@+id/lblStemp"/>

            <EditText
                style="@style/MainPageTextbox"
                android:inputType="number"
                android:id="@+id/tbStemp"
                />

            <Spinner android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/temperatureMeasure"
                android:id="@+id/spinnerStemp"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/bottemp"
                style="@style/MainPageLabel"
                android:id="@+id/lblBotTemp"/>

            <EditText
                style="@style/MainPageTextbox"
                android:inputType="number"
                android:id="@+id/tbBotTemp"
                />

            <Spinner android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/temperatureMeasure"
                android:id="@+id/spinnerBotTemp"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/secchiDepth"
                style="@style/MainPageLabel"
                android:id="@+id/lblSD"/>

            <EditText
                style="@style/MainPageTextbox"
                android:inputType="number"
                android:id="@+id/tbSD"
                />
            <Spinner android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/depthMeasure"
                android:id="@+id/spinnerSD"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/dO"
                style="@style/MainPageLabel"
                android:id="@+id/lblDO"/>

            <EditText
                style="@style/MainPageTextbox"
                android:inputType="number"
                android:id="@+id/tbDO"
                />

        </TableRow>

        <TableRow>

            <Button android:text="@string/btnLblCalc"
                android:id="@+id/btnCalculate"
                android:onClick="methodCalculate"/>


            <Button android:text="@string/btnLblClear"
                android:id="@+id/btnClose"
                android:onClick="methodClear"/>


        </TableRow>


        <TableRow android:gravity="left">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MainPageLabel"
                android:text="Details of the lake"
                />

        </TableRow>
        <TableRow android:layout_gravity="center">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblLocation"
                android:textStyle="bold"
                />

        </TableRow>
        <TableRow android:layout_gravity="center">
            <ImageView
                android:id="@+id/userImage"
                android:layout_span="2"
                />

        </TableRow>
        <TableRow android:layout_gravity="center">
            <Button android:text="Take Picture"
                android:id="@+id/btnCamera"
                android:layout_span="2"
                android:onClick="takePicture"/>

        </TableRow>


    </TableLayout>

    </RelativeLayout>
</ScrollView>
